force-app/main/default/objects/Case_History__c/Case_History__c.object-meta.xml
<CustomObject>
    <label>Case History</label>
    <nameField>
        <label>Case History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>