force-app/main/default/objects/Case_History__c/fields/Case_Request__c.field-meta.xml
<CustomField>
    <fullName>Case_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Request</label>
    <referenceTo>Case_Request__c</referenceTo>
    <relationshipLabel>Case Histories</relationshipLabel>
    <relationshipName>Case_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>