force-app/main/default/objects/Case_History__c/fields/Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Time_Closed__c</fullName>
    <label>Time Closed</label>
    <type>DateTime</type>
</CustomField>